export class Categoria {
  constructor(nombre, multiplicador, costo, referidosMinimos) {
    this.nombre = nombre;
    this.multiplicador = multiplicador;
    this.costo = costo;
    this.referidosMinimos = referidosMinimos;
  }
}
