export class Materia {
  constructor(nombre, aprobada, nota) {
    this.nombre = nombre;
    this.aprobada = aprobada;
    this.nota = nota;
  }
}
