export class Referido {
  constructor(email, dni, referente) {
    this.email = email;
    this.dni = dni;
    this.referente = referente;
    this.aceptado = false;
  }
}
